--- a/package.json
+++ b/package.json
@@ -3,12 +3,31 @@
   "displayName": "Oceanic Solitude Theme",
   "description": "Um tema inspirado nas profundezas do oceano, evocando uma sensação de solidão e tranquilidade.",
   "version": "0.0.1",
-  "publisher": "Delfim Celestino Amisse Pastola",
+  "publisher": "OceanicSolitude",
+  "icon": "images/logo.jpeg",
+  "author": {
+    "name": "Delfim Celestino Amisse Pastola",
+    "email": "delfimcelestinoamissepastola@gmail.com"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/DelfimCelestino/oceanic-solitude.git"
+  },
+  "bugs": {
+    "url": "https://github.com/DelfimCelestino/oceanic-solitude/issues",
+    "email": "delfimcelestinoamissepastola@gmail.com"
+  },
   "engines": {
     "vscode": "^1.50.0"
   },
   "categories": [
     "Themes"
+  ],
+  "keywords": [
+    "Themes",
+    "Dark Theme",
+    "color-theme",
+    "Oceanic Solitude"
   ],
   "contributes": {
     "themes": [
