--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "oceanic-solitude",
   "displayName": "Oceanic Solitude Theme",
   "description": "Um tema inspirado nas profundezas do oceano, evocando uma sensação de solidão e tranquilidade.",
-  "version": "0.0.2",
-  "publisher": "OceanicSolitude",
+  "version": "0.0.1",
+  "publisher": "DelfimCelestino",
   "icon": "images/logo.jpeg",
   "author": {
     "name": "Delfim Celestino Amisse Pastola",
